--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,9 +2,9 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="dist.js"></script>
     </head>
     <body>
         <h1>Hello, world! Brought to you by webpack!</h1>
+        <h2>Hei</h2>
     </body>
 </html>
