--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,20 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-    </head>
-    <body>
-        <h1>Hello, world! Brought to you by webpack!</h1>
-        <h2>Hei</h2>
-    </body>
+
+<head>
+    <meta charset="UTF-8">
+    <title>LAPS</title>
+</head>
+
+<body>
+    <h1>hei</h1>
+    <div id="root">
+        Start X <input v-model="coordinates.start.x"><br>
+        Start Y <input v-model="coordinates.start.y"><br>
+        End X <input v-model="coordinates.end.x"> <br>
+        End Y <input v-model="coordinates.end.y"> <br>
+        <button v-on:click="submit_points">Send</button>
+    </div>
+</body>
+
 </html>
