--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,9 @@
 
   <body>
     <h1>Laps</h1>
-    <div id="sendCords"></div>
+    <div id="header"></div>
+    <div id="getAlgorithm"></div>
     <div id="getMap"></div>
+    <div id="sendCords"></div>
   </body>
 </html>
