--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,8 +6,9 @@
   </head>
 
   <body>
-    <h1>Laps</h1>
+    <!--<h1>Laps</h1>-->
     <div id="header"></div>
+    <br />
     <div id="getAlgorithm"></div>
     <div id="getMap"></div>
     <div id="sendCords"></div>
