--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,6 +10,7 @@
     <div id="header"></div>
     <br />
     <div id="getAlgorithm"></div>
+    <!-- <div id="mapMenu"></div>-->
     <div id="getMap"></div>
     <div id="sendCords"></div>
   </body>
