[frontend] Add admin panel stuff

--- a/frontend/admin.html
+++ b/frontend/admin.html
@@ -1,7 +1,14 @@
 <!DOCTYPE html>
-<head>
-  <title>LAPS admin panel</title>
-</head>
-<body>
-  <h1>TODO</h1>
-</body>
+<html>
+  <head>
+    <meta charset="UTF-8" />
+    <title>LAPS admin panel</title>
+  </head>
+  <body>
+    <div id="adminPanelModules"></div>
+    <div id="uploadMap"></div>
+    <div id="moduleUploader"></div>
+    <div id="registrationBox"></div>
+    <script src="admin.js"></script>
+  </body>
+</html>
