--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,5 +12,7 @@
     <div id="getAlgorithm"></div>
     <div id="getMap"></div>
     <div id="sendCords"></div>
+
+    <script src="index.js"></script>
   </body>
 </html>
