--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,7 @@
     <!--<h1>Laps</h1>-->
     <div id="header"></div>
     <br />
+    <!--<div id="mapData"></div>-->
     <div id="getAlgorithm"></div>
     <div id="getMap"></div>
     <div id="sendCords"></div>
