added link to admin panel

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -12,6 +12,8 @@
     <div id="getAlgorithm"></div>
     <div id="getMap"></div>
     <div id="sendCords"></div>
+    <div id="loginLink"></div>
+
 
     <script src="index.js"></script>
   </body>
